watchlist items add nd delete operations implemented sucessfully

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   "prisma.pinToPrisma6": false,
-  "cSpell.words": ["alexa", "WATCHLIST"]
+  "cSpell.words": ["alexa", "disconneuser", "Shawshank", "WATCHLIST"]
 }
