api fully implemented

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,13 @@
 {
   "prisma.pinToPrisma6": false,
-  "cSpell.words": ["alexa", "disconneuser", "Shawshank", "WATCHLIST"]
+  "cSpell.words": [
+    "alexa",
+    "Baggins",
+    "disconneuser",
+    "Gump",
+    "hitmen",
+    "Sauron",
+    "Shawshank",
+    "WATCHLIST"
+  ]
 }
