--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_ENV=test jest tests/basic.test.js tests/simple.test.js",
+    "test:watch": "NODE_ENV=test jest --watch",
+    "test:coverage": "NODE_ENV=test jest --coverage",
+    "test:api": "NODE_ENV=test jest tests/api.test.js",
+    "test:unit": "NODE_ENV=test jest tests/basic.test.js tests/simple.test.js",
+    "test:all": "NODE_ENV=test jest",
     "dev": "nodemon src/server.js",
     "seed": "node prisma/seed.js"
   },
@@ -23,8 +28,14 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@babel/core": "^7.29.0",
+    "@babel/preset-env": "^7.29.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^25.2.3",
+    "babel-jest": "^30.2.0",
     "dotenv": "^17.2.4",
-    "prisma": "^7.4.0"
+    "jest": "^30.2.0",
+    "prisma": "^7.4.0",
+    "supertest": "^7.2.2"
   }
 }
