project just completed now

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ DATABASE_URL="postgresql://username:password@localhost:5432/moviedb?schema=publi
 # Server
 PORT=5001
 NODE_ENV=development
+
+# TMDB API
+TMDB_API_KEY=your_tmdb_api_key_here
